--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,6 @@ header {
     position: relative;
 }
 
-.row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .head-wrapper {
     display: flex;
     flex-direction: column;
@@ -86,7 +80,38 @@ header {
     opacity: .65;
 }
 
+.hero {
+    padding: 1em 0;
+}
+
+.hero__img {
+    width: 100%;
+}
+
+.hero__text {
+    padding: 0 1.8em;
+    text-align: center;
+}
+
+.hero__text h1 {
+    font-size: 36px;
+    color: #105378;
+    font-weight: 900;
+}
+
+.hero__text p {
+    font-size: 20px;
+    color: #105378;
+}
+
 @media (min-width: 800px) {
+
+    .row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .nav-toggle {
         display: none;
     }
